# terebellum

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: error.rs  lib.rs  prelude.rs
src/nn/: mod.rs
src/nn/vq/: mod.rs  quantizer.rs
tests/: prelude_tests.rs
