[package]
name = "terebellum"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
burn = { version = "0.19.1", features = ["ndarray", "train"] }
burn-ndarray = "0.19.1"
derive_more = { version = "2.1.0", features = ["from"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
